[project]
name = "langchain-mcp-tools"
version = "0.3.1"
description = "Model Context Protocol (MCP) To LangChain Tools Conversion Utility"
keywords = [
    "modelcontextprotocol",
    "mcp",
    "mcp-client",
    "langchain",
    "langchain-python",
    "tool-call",
    "tool-calling",
    "python",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema-pydantic>=0.6",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "mcp>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastmcp>=2.10.1,<2.14",
    "langchain-anthropic>=1.3.2",
    "langchain-cerebras>=0.8.2",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.8",
    "langchain-xai>=1.2.2",
    "langchain>=1.2.9",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "websockets>=15.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
langchain_mcp_tools = ["py.typed"]

[project.urls]
"Bug Tracker" = "https://github.com/hideya/langchain-mcp-tools-py/issues"
"Source Code" = "https://github.com/hideya/langchain-mcp-tools-py"
